maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:3: error: '(' expected but identifier found.
    while (!estSurBiscuit()) {if (random3()==0) {if (!estFaceMur()) {avance()}} else {(if random3()==1) {droite()} else {gauche()}}} ; prendBiscuit()
                                                                                          ^RandomMouseMaze:3: error: illegal start of simple expression
    while (!estSurBiscuit()) {if (random3()==0) {if (!estFaceMur()) {avance()}} else {(if random3()==1) {droite()} else {gauche()}}} ; prendBiscuit()
                                                                                                                                  ^